tests/compile-fail/unnamed_const.stderr
error: expected identifier, found reserved identifier `_`
 --> tests/compile-fail/unnamed_const.rs:7:25
  |
7 |         const A = Self::_.bits();
  |                         ^ expected identifier, found reserved identifier

error[E0599]: no associated item named `_` found for struct `Unnamed` in the current scope
 --> tests/compile-fail/unnamed_const.rs:7:25
  |
3 | / bitflags! {
4 | |     pub struct Unnamed: u8 {
5 | |         const _ = 1;
6 | |
7 | |         const A = Self::_.bits();
  | |                         ^ associated item not found in `Unnamed`
8 | |     }
9 | | }
  | |_- associated item `_` not found for this struct
  |
note: if you're trying to build a new `Unnamed` consider using one of the following associated functions:
      _::<impl Unnamed>::empty
      _::<impl Unnamed>::all
      _::<impl Unnamed>::from_bits
      _::<impl Unnamed>::from_bits_truncate
      and $N others
 --> tests/compile-fail/unnamed_const.rs:3:1
  |
3 | / bitflags! {
4 | |     pub struct Unnamed: u8 {
5 | |         const _ = 1;
6 | |
7 | |         const A = Self::_.bits();
8 | |     }
9 | | }
  | |_^
  = note: this error originates in the macro `$crate::__impl_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
help: there is an associated constant `A` with a similar name
  |
7 |         const A = Self::A.bits();
  |                         ~
